Update and rename backend-test-CI-CD to backend-test-CI-CD.yml

--- a/.github/workflows/backend-test-CI-CD.yml
+++ b/.github/workflows/backend-test-CI-CD.yml
@@ -1,10 +1,9 @@
 name: Back end CI-CD test
 
 on:
-  push:
-    branches: main
   pull_request:
-    branches: main
+  push:
+    branches: [main,develop]
 
 jobs:
   build_test:
