--- a/.github/workflows/backend-test-CI-CD.yml
+++ b/.github/workflows/backend-test-CI-CD.yml
@@ -6,8 +6,13 @@ on:
     branches: [main,develop]
 
 jobs:
-  build_test:
+  build_test_analyze_with_sonar:
     runs-on: ubuntu-latest
+    
+    defaults:
+      run: 
+        working-directory: ./back
+        
     steps:
       - name: checkout code
         uses: actions/checkout@v4
@@ -31,4 +36,24 @@ jobs:
         with:
           name: jacoco-code-coverage-report
           path: back/target/site/jacoco
-    
+        
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+          
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+          
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Axel-Ha_Projet-7-OpenClassroom
+        
