--- a/back/pom.xml
+++ b/back/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>11</java.version>
 		<sonar.organization>axel-ha</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.projectKey>Axel-Ha-BobApp-back</sonar.projectKey>
 	</properties>
 	<dependencies>
 		<dependency>
