--- a/back/pom.xml
+++ b/back/pom.xml
@@ -15,8 +15,7 @@
 	<description>L'application de joke par excellence !</description>
 	<properties>
 		<java.version>11</java.version>
-<!-- 		<sonar.organization>axel-ha</sonar.organization> -->
-		<sonar.organization>default</sonar.organization>
+		<sonar.organization>axel-ha</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.projectKey>Axel-Ha_Projet-7-OpenClassroom</sonar.projectKey>
 	</properties>
