--- a/.github/workflows/frontend-test-CI-CD.yml
+++ b/.github/workflows/frontend-test-CI-CD.yml
@@ -6,7 +6,7 @@ on:
     branches: [main,develop]
 
 jobs:
-  build_test:
+  build_test_analyze_with_sonar:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
@@ -29,5 +29,20 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: front/coverage/
-    
+          path: front/coverage   
+          
+      - name: Cache SonarQube packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+          
+      - name: Analyze with SonarCloud
+        uses: SonarSource/sonarcloud-github-action@master
+        with:
+          projectBaseDir: ./front
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      
