--- a/front/sonar-project.properties
+++ b/front/sonar-project.properties
@@ -7,6 +7,7 @@ sonar.sources=./src/app
 sonar.test.sources=./src/app
 sonar.test.inclusions=./src/tests.ts, **/*.spec.ts
 sonar.javascript.lcov.reportPaths=./coverage/bobapp/lcov.info
+sonar.search.javaOpts=-Xms512m -Xmx1024m
 
 # Exclusions
 sonar.exclusions=./node_modules/**, ./dist/**, ./src/environments/**
