--- a/.github/workflows/frontend-test-CI-CD.yml
+++ b/.github/workflows/frontend-test-CI-CD.yml
@@ -44,5 +44,5 @@ jobs:
           projectBaseDir: ./front
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            SONAR_TOKEN: ${{ secrets.SONARCLOUD_SECRET_TOKEN }}
       
