--- a/front/sonar-project.properties
+++ b/front/sonar-project.properties
@@ -1,5 +1,5 @@
 # SonarCloud Project info
-sonar.projectKey=Axel-Ha_Projet-7-OpenClassroom
+sonar.projectKey=bobapp
 sonar.organization=axel-ha
 
 # Config
