--- a/back/pom.xml
+++ b/back/pom.xml
@@ -16,7 +16,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<sonar.organization>axel-ha</sonar.organization>
-		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.host.url>http://localhost:9000</sonar.host.url>
 		<sonar.projectKey>Bobapp</sonar.projectKey>
 	</properties>
 	<dependencies>
