--- a/back/pom.xml
+++ b/back/pom.xml
@@ -16,8 +16,8 @@
 	<properties>
 		<java.version>11</java.version>
 		<sonar.organization>axel-ha</sonar.organization>
-
-		<sonar.projectKey>Bobapp</sonar.projectKey>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.projectKey>axel-ha_bobapp-back</sonar.projectKey>
 	</properties>
 	<dependencies>
 		<dependency>
