--- a/.github/workflows/backend-test-CI-CD.yml
+++ b/.github/workflows/backend-test-CI-CD.yml
@@ -50,12 +50,10 @@ jobs:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-          
-
-          
+                    
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Bobapp -Dsonar.projectName='Bobapp'
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=axel-ha_bobapp-back -Dsonar.projectName='axel-ha_bobapp-back'
         
