--- a/.github/workflows/frontend-test-CI-CD.yml
+++ b/.github/workflows/frontend-test-CI-CD.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build_test_analyze_with_sonar:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./front
     steps:
       - name: checkout code
         uses: actions/checkout@v4
