--- a/.github/workflows/frontend-test-CI-CD.yml
+++ b/.github/workflows/frontend-test-CI-CD.yml
@@ -19,7 +19,15 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-      
+          
+      - name: Cache Node.js modules
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+            
       - name: Install depedencies
         run: npm install
         working-directory: ./front
