--- a/.github/workflows/frontend-test-CI-CD.yml
+++ b/.github/workflows/frontend-test-CI-CD.yml
@@ -49,11 +49,9 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
           
-      - name: Analyze with SonarCloud
-        uses: SonarSource/sonarcloud-github-action@master
-        with:
-          projectBaseDir: ./front
+      - name: Build and analyze
         env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-            SONAR_TOKEN: ${{ secrets.SONARCLOUD_SECRET_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=bobapp_front -Dsonar.projectName='bobapp_front'
             
