--- a/front/sonar-project.properties
+++ b/front/sonar-project.properties
@@ -1,5 +1,5 @@
 # SonarCloud Project info
-sonar.projectKey=bobapp-front
+sonar.projectKey=axel-ha_bopapp-front
 sonar.organization=axel-ha
 
 # Config
