--- a/back/pom.xml
+++ b/back/pom.xml
@@ -17,7 +17,7 @@
 		<java.version>11</java.version>
 		<sonar.organization>axel-ha</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io/</sonar.host.url>
-		<sonar.projectKey>bobapp-back</sonar.projectKey>
+		<sonar.projectKey>axel-ha_bobapp-back</sonar.projectKey>
 	</properties>
 	<dependencies>
 		<dependency>
