--- a/.github/workflows/backend-test-CI-CD.yml
+++ b/.github/workflows/backend-test-CI-CD.yml
@@ -53,8 +53,8 @@ jobs:
                     
       - name: Build and analyze
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=axel-ha_bobapp-back -Dsonar.projectName='axel-ha_bobapp-back'
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=axel-ha_bobapp-back
         
       
