--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,7 +42,7 @@ jobs:
           
       - name: Install frontend dependencies and run tests
         working-directory: ./front
-        run: npm install && npm test -- --watch=false --code-coverage --browsers=ChromeHeadlessCI
+        run: npm install && npm run test -- --code-coverage --browsers=ChromeHeadless --watch=false
 
       - name: Build and verify backend with Maven
         working-directory: ./back
