--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,17 +46,17 @@ jobs:
         working-directory: ./back
         run: mvn verify
         
-      # - name: Commit and push coverage reports
-      #   env:
-      #     PAT: ${{ secrets.PAT }}
-      #   run: |
-      #     git config --global user.name 'Axel-Ha'
-      #     git config --global user.email 'axel.halifa0@gmail.com'
-      #     git remote set-url origin https://github.com/Axel-Ha/Projet-7-OpenClassroom.git
-      #     git add -f ./front/coverage/bobapp/lcov.info
-      #     git add -f ./back/target/site/jacoco/jacoco.xml
-      #     git commit -m "Add coverage reports [skip ci]"
-      #     git push https://x-access-token:${{ secrets.PAT }}@github.com:Axel-Ha/Projet-7-OpenClassroom.git HEAD:main
+      - name: Commit and push coverage reports
+        env:
+          PAT: ${{ secrets.PAT }}
+        run: |
+          git config --global user.name 'Axel-Ha'
+          git config --global user.email 'axel.halifa0@gmail.com'
+          git remote set-url origin https://github.com/Axel-Ha/Projet-7-OpenClassroom.git
+          git add -f ./front/coverage/bobapp/lcov.info
+          git add -f ./back/target/site/jacoco/jacoco.xml
+          git commit -m "Add coverage reports [skip ci]"
+          git push https://x-access-token:${{ secrets.PAT }}@github.com:Axel-Ha/Projet-7-OpenClassroom.git HEAD:main
         
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
