--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,14 +38,20 @@ jobs:
         with:
           node-version: '18'
           
-      - name: Install frontend dependencies and run tests
-        working-directory: ./front
-        run: npm install && npm run test -- --code-coverage --browsers=ChromeHeadless --watch=false
+      # - name: Install frontend dependencies and run tests
+      #   working-directory: ./front
+      #   run: npm install && npm run test -- --code-coverage --browsers=ChromeHeadless --watch=false
 
       - name: Build and verify backend with Maven
         working-directory: ./back
         run: mvn verify
-        
+
+      - name: Upload Jacoco report
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-code-coverage-report
+          path: back/target/site/jacoco
+          
       - name: Commit and push coverage reports
         env:
           PAT: ${{ secrets.PAT }}
@@ -53,7 +59,7 @@ jobs:
           git config --global user.name 'Axel-Ha'
           git config --global user.email 'axel.halifa0@gmail.com'
           git remote set-url origin https://github.com/Axel-Ha/Projet-7-OpenClassroom.git
-          git add -f ./front/coverage/bobapp/lcov.info
+          # git add -f ./front/coverage/bobapp/lcov.info
           git add -f ./back/target/site/jacoco/jacoco.xml
           git commit -m "Add coverage reports [skip ci]"
           git push https://x-access-token:${{ secrets.PAT }}@github.com:Axel-Ha/Projet-7-OpenClassroom.git HEAD:main
