--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           
       - name: Build Docker images
@@ -31,5 +31,5 @@ jobs:
           
       - name: Push Docker images
         run: |
-          docker push ${{ vars.DOCKERHUB_USERNAME }}/bobapp-backend:latest
-          docker push ${{ vars.DOCKERHUB_USERNAME }}/bobapp-frontend:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/bobapp-backend:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/bobapp-frontend:latest
