--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,11 +41,23 @@ jobs:
       - name: Install frontend dependencies and run tests
         working-directory: ./front
         run: npm install && npm run test -- --code-coverage --browsers=ChromeHeadless --watch=false
-
+          
       - name: Build and verify backend with Maven
         working-directory: ./back
         run: mvn verify
-
+        
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: ./front/coverage/
+          
+      - name: Upload JaCoCo report
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-report
+          path: ./back/target/site/jacoco
+          
       - name: Commit and push coverage reports
         env:
           PAT: ${{ secrets.PAT }}
