--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,6 +3,10 @@ name: CI
 on:
   pull_request:
   push:
+    paths:
+      - 'front/**'
+      - 'back/**'
+      - '.github/workflows/**'
     branches: [main]
 
 jobs:
