--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -3,7 +3,11 @@ name: CD
 on:
   pull_request:
   push:
-    branches: [main, develop]
+    paths:
+      - 'front/**'
+      - 'back/**'
+      - '.github/workflows/**'
+    branches: [main]
     
 jobs:
   build_and_push_docker_image:
